--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrvJsRrfJrN4qx9J1AJFIj",
+      "authorship_tag": "ABX9TyPtkOFH7xUDgeLduhRCuanq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,20 +118,20 @@
         "\n",
         "print(\"Анализ уровня тревоги\")\n",
         "\n",
-        "if alarm >= 45:\n",
-        "  alarm_level = \"высокий\"\n",
-        "elif 31-44:\n",
-        "  alarm_level = \"умеренный\"\n",
-        "else:\n",
+        "if alarm <= 30:\n",
         "  alarm_level = \"низкий\"\n",
+        "elif alarm >= 45:\n",
+        "  alarm_level = \"высокий\"\n",
+        "else:\n",
+        "  alarm_level = \"умеренный\"\n",
         "\n",
         "print(f\"Уровень тревоги: {alarm} -> {alarm_level}\")\n",
         "print(\"ИТОГ\")\n",
         "\n",
-        "if has_anxiety or alarm >=45:\n",
-        "  print(\"Рекомендуется срочная психологическая поддержка\")\n",
-        "elif has_positive or alarm <=30:\n",
+        "if has_anxiety or alarm <= 30:\n",
         "  print(\"Состояние хорошее\")\n",
+        "elif has_positive or alarm >=45 :\n",
+        "  print(\"Рекомендуется срочная психологическая поддержка\")\n",
         "else:\n",
         "  print(\"Состояние в пределах ожидаемого. Продолжайте наблюдение\")"
       ],
@@ -140,30 +140,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-hhHJ224zSVQ",
-        "outputId": "b9c1bb36-26ad-4e8b-819c-de4fe4cc57b9"
+        "outputId": "5c518942-e5fd-41f1-d935-17df63ee6027"
       },
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Введите ваше имя: Варя\n",
-            "Как вы себя чувствуете?: плохо\n",
-            "Шкала тревоги (20-80): 70\n",
+            "Как вы себя чувствуете?: нормально\n",
+            "Шкала тревоги (20-80): 32\n",
             "\n",
             "\n",
             "====================\n",
             "Результат уровня тревоги\n",
             "====================\n",
             "Имя: Варя\n",
-            "Сообщение: плохо\n",
+            "Сообщение: нормально\n",
             "Анализ маркеров текста\n",
             "Смешанные или нейтральные эмоции\n",
             "Анализ уровня тревоги\n",
-            "Уровень тревоги: 70 -> высокий\n",
+            "Уровень тревоги: 32 -> умеренный\n",
             "ИТОГ\n",
-            "Рекомендуется срочная психологическая поддержка\n"
+            "Состояние в пределах ожидаемого. Продолжайте наблюдение\n"
           ]
         }
       ]
